Fix storage service implementations and tag controller
1. Added thumbnailPath field to File entity
2. Implemented store(InputStream) method in storage services
3. Added findFilesWithoutThumbnails to FileRepository
4. Created ThumbnailService implementation
5. Resolved annotation conflict in TagController
6. Removed basic storage services in favor of enhanced versions
7. Fixed storage configuration to use enhanced implementations